--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,5 @@ set(SOURCES source/bitstream.cpp
 
 set(COMMON_LIBS cppkit avkit va va-drm)
 
+include(common.cmake NO_POLICY_SCOPE)
 include(../devel_artifacts/build/base_lib.cmake NO_POLICY_SCOPE)
