Fix for screwed up include dirs config.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,5 @@ set(SOURCES source/bitstream.cpp
 
 set(COMMON_LIBS cppkit avkit va va-drm)
 
-winclude(common.cmake NO_POLICY_SCOPE)
+include(common.cmake NO_POLICY_SCOPE)
 include("${devel_artifacts_path}/build/base_lib.cmake" NO_POLICY_SCOPE)
